--- a/index.html
+++ b/index.html
@@ -12,7 +12,22 @@
     <title>Funny Random Quote</title>
 </head>
 <body>
-
+    <div class="container-fluid d-flex align-items-center justify-content-center">
+        <div class="form-check form-switch">
+            <input class="form-check-input" type="checkbox" role="switch" id="flexSwitchCheckDefault">
+            <label class="form-check-label text-dark" for="flexSwitchCheckDefault">Light Mode</label>
+        </div>
+        <div class="quote-title my-4">
+            <h1 class="display-1 title">Funny Quotes</h1>
+        </div>
+        <div class="container p-5 bg-dark  d-flex align-items-center justify-content-center text-center">
+            <h2 class="quote display-4 text-white my-4">Generate quote</h2>
+            <h4 class="quote display-6 text-white"></h4>
+        </div>
+        <div class="quoteBtn my-4">
+            <button type="button" class="btn btn-dark fs-3">Generate</button>
+        </div>
+    </div>
     <script src="js/main.js"></script>
 </body>
 </html>
