--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css">
     <!-- Custom CSS -->
     <link rel="stylesheet" href="css/style.css">
     <title>Funny Random Quote</title>
@@ -21,8 +22,9 @@
     <div class="container-fluid d-flex align-items-center justify-content-center">
         <!-- Dark/Light Mode Switch -->
         <div class="form-check form-switch">
+            <label class="form-check-label text-dark" for="flexSwitchCheckDefault"><i class="fa-regular fa-lightbulb"></i></label>
             <input class="form-check-input" type="checkbox" role="switch" id="flexSwitchCheckDefault">
-            <label class="form-check-label text-dark" for="flexSwitchCheckDefault">Light Mode</label>
+            <label class="form-check-label text-dark" for="flexSwitchCheckDefault"><i class="fa-solid fa-lightbulb"></i></label>
         </div>
         <!-- Title for the Quotes Section -->
         <div class="quote-title my-4">
