Update switch layout to position labels on either side of the switch  - Modified HTML to position "Light Mode" and "Dark Mode" labels with icons on either side of the switch. - Updated structure to ensure correct placement and alignment.

--- a/index.html
+++ b/index.html
@@ -21,11 +21,11 @@
     <!-- Container for the entire content, centered using flex utilities -->
     <div class="container-fluid d-flex align-items-center justify-content-center">
         <!-- Dark/Light Mode Switch -->
-        <div class="form-check form-switch">
-            <label class="form-check-label text-dark" for="flexSwitchCheckDefault"><i class="fa-regular fa-lightbulb"></i></label>
-            <input class="form-check-input" type="checkbox" role="switch" id="flexSwitchCheckDefault">
-            <label class="form-check-label text-dark" for="flexSwitchCheckDefault"><i class="fa-solid fa-lightbulb"></i></label>
-        </div>
+       <div class="switch-container">
+    <label class="form-check-label text-dark" for="flexSwitchCheckDefault"><i class="fa-solid fa-lightbulb"></i></label>
+    <input class="form-check-input" type="checkbox" role="switch" id="flexSwitchCheckDefault">
+    <label class="form-check-label text-dark" for="flexSwitchCheckDefault"><i class="fa-regular fa-lightbulb"></i></label>
+</div>
         <!-- Title for the Quotes Section -->
         <div class="quote-title my-4">
             <h1 class="display-1 title">Funny Quotes</h1>
